Adding a new crawler (#27)
* Adding a new crawler
* Updating analysis